fix: update OG and Twitter card images to use apple-touch-icon

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:url" content="https://denso.vercel.app/" />
     <meta property="og:title" content="Denso - Temporizador de estudio minimalista" />
     <meta property="og:description" content="Haz tu tiempo más denso. Pomodoro, seguimiento de materias, logros y modo offline." />
-    <meta property="og:image" content="https://denso.vercel.app/og-image.png" />
+    <meta property="og:image" content="https://denso.vercel.app/apple-touch-icon.png" />
     <meta property="og:locale" content="es_ES" />
 
     <!-- Twitter Cards -->
@@ -21,7 +21,7 @@
     <meta name="twitter:url" content="https://denso.vercel.app/" />
     <meta name="twitter:title" content="Denso - Temporizador de estudio minimalista" />
     <meta name="twitter:description" content="Haz tu tiempo más denso. Pomodoro, seguimiento de materias, logros y modo offline." />
-    <meta name="twitter:image" content="https://denso.vercel.app/og-image.png" />
+    <meta name="twitter:image" content="https://denso.vercel.app/apple-touch-icon.png" />
 
     <!-- Theme -->
     <meta name="theme-color" content="#141414" media="(prefers-color-scheme: dark)" />
