fix: update OG URLs to denso.study domain

--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
 
     <!-- Open Graph -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://denso.vercel.app/" />
+    <meta property="og:url" content="https://denso.study/" />
     <meta property="og:title" content="Denso - Temporizador de estudio minimalista" />
     <meta property="og:description" content="Haz tu tiempo más denso. Pomodoro, seguimiento de materias, logros y modo offline." />
-    <meta property="og:image" content="https://denso.vercel.app/apple-touch-icon.png" />
+    <meta property="og:image" content="https://denso.study/apple-touch-icon.png" />
     <meta property="og:locale" content="es_ES" />
 
     <!-- Twitter Cards -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:url" content="https://denso.vercel.app/" />
+    <meta name="twitter:url" content="https://denso.study/" />
     <meta name="twitter:title" content="Denso - Temporizador de estudio minimalista" />
     <meta name="twitter:description" content="Haz tu tiempo más denso. Pomodoro, seguimiento de materias, logros y modo offline." />
-    <meta name="twitter:image" content="https://denso.vercel.app/apple-touch-icon.png" />
+    <meta name="twitter:image" content="https://denso.study/apple-touch-icon.png" />
 
     <!-- Theme -->
     <meta name="theme-color" content="#141414" media="(prefers-color-scheme: dark)" />
@@ -41,7 +41,7 @@
       "@type": "WebApplication",
       "name": "Denso",
       "description": "Temporizador de estudio minimalista con técnica Pomodoro, seguimiento de materias, logros y modo offline.",
-      "url": "https://denso.vercel.app",
+      "url": "https://denso.study",
       "applicationCategory": "ProductivityApplication",
       "operatingSystem": "Any",
       "offers": {
