feat: add favicon.ico and PWA icons
- Add favicon.ico (16x16, 32x32) for legacy browsers
- Add PWA icons in 192x192 and 512x512 sizes
- Add maskable icons with safe zone padding
- Update manifest.json with proper icon definitions
- Bump version to 1.0.0

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/logo.svg" />
+    <link rel="icon" href="/favicon.ico" sizes="32x32" />
+    <link rel="icon" href="/logo.svg" type="image/svg+xml" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <meta name="description" content="Denso es un temporizador de estudio minimalista con técnica Pomodoro, seguimiento de materias, logros y modo offline. Haz tu tiempo más denso." />
     <meta name="keywords" content="pomodoro, temporizador, estudio, productividad, focus, timer, estudiantes" />
