privacy: enable IP anonymization in Google Analytics

--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'G-6K2WE4Z88Z');
+      gtag('config', 'G-6K2WE4Z88Z', {
+        anonymize_ip: true
+      });
     </script>
 
     <!-- Structured Data -->
