seo: fix URLs and add canonical tag

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Denso es un temporizador de estudio minimalista con técnica Pomodoro, seguimiento de materias, logros y modo offline. Haz tu tiempo más denso." />
     <meta name="keywords" content="pomodoro, temporizador, estudio, productividad, focus, timer, estudiantes" />
     <meta name="author" content="Denso" />
+    <link rel="canonical" href="https://denso.study/" />
 
     <!-- Open Graph -->
     <meta property="og:type" content="website" />
